[package]
name = "cyber"
version = "0.1.3"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Library for cyber blockchain"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/cyber-rs"
repository = "https://github.com/CipherDogs/cyber-rs"
keywords = ["cyber", "blockchain", "ipfs"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.7.2"
hdwallet = "0.2.5"
ripemd160 = "0.9.1"
secp256k1 = "0.17.2"
sha2 = "0.9.1"
subtle-encoding = {version = "0.5.1", features = ["bech32-preview"]}
tiny-bip39 = "0.7.3"
