[package]
name = "cyber"
version = "1.0.1"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Library for cyber blockchain"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/cyber-rs"
repository = "https://github.com/CipherDogs/cyber-rs"
keywords = ["cyber", "blockchain", "ipfs"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9.0"
hdwallet = "0.3.1"
ripemd = "0.1.1"
sha2 = "0.10.2"
subtle-encoding = {version = "0.5.1", features = ["bech32-preview"]}
tiny-bip39 = "0.8.2"
