[package]
name = "cyber"
version = "1.0.2"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Library for cyber blockchain"
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/CipherDogs/cyber-rs"
repository = "https://github.com/CipherDogs/cyber-rs"
keywords = ["cyber", "blockchain", "ipfs"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9"
hdwallet = "0.4"
ripemd = "0.1"
sha2 = "0.10"
subtle-encoding = {version = "0.5.1", features = ["bech32-preview"]}
tiny-bip39 = "1.0"
